--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,29 +1,35 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Item:</strong>
-  <%= @review.item %>
+  <strong>商品:</strong>
+  <%= link_to @review.item.name, @review.item %>
 </p>
 
 <p>
-  <strong>User:</strong>
-  <%= @review.user %>
+  <strong>投稿者:</strong>
+  <% if @review.user %>
+  <%= link_to @review.user.name, @review.user %>
+  <% else %>
+    匿名ユーザ
+  <% end %>
 </p>
 
 <p>
-  <strong>Score:</strong>
-  <%= @review.score %>
+  <strong>評価:</strong>
+  ★<%= @review.score %>
 </p>
 
 <p>
-  <strong>Title:</strong>
+  <strong>見出し:</strong>
   <%= @review.title %>
 </p>
 
 <p>
-  <strong>Content:</strong>
+  <strong>内容:</strong>
   <%= @review.content %>
 </p>
 
-<%= link_to 'Edit', edit_review_path(@review) %> |
-<%= link_to 'Back', reviews_path %>
+<% if @user_logged_in && @review.user && @user_logged_in.id == @review.user.id %>
+  <%= link_to '編集', edit_review_path(@review) %> |
+  <%= link_to '削除', @review, method: :delete, data: { confirm: '本当に削除しますか?' } %>
+<% end %>
