--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,22 +1,25 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong>商品名:</strong>
   <%= @item.name %>
 </p>
 
 <p>
-  <strong>Price:</strong>
-  <%= @item.price %>
+  <strong>価格:</strong>
+  <%= @item.price.to_s(:delimited) %>円
 </p>
 
 <p>
-  <strong>Description:</strong>
+  <strong>商品の説明:</strong>
   <%= @item.description %>
 </p>
 
-<%= link_to 'Edit', edit_item_path(@item) %> |
-<%= link_to 'Back', items_path %>
+<% if @user_logged_in && @user_logged_in.id == @item.user.id %>
+  <%= link_to '商品情報の編集', edit_item_path(@item) %> |
+  <%= link_to '商品を削除', @item, method: :delete, data: { confirm: '本当に商品を削除しますか?' } %> |
+<% end %>
+<%= link_to '商品一覧', items_path %>
 
 <%= form_tag '/cart/add_item/' do %>
   <p>
