--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -12,21 +12,21 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
+    <%= form.label :name, '商品名' %>
     <%= form.text_field :name, id: :item_name %>
   </div>
 
   <div class="field">
-    <%= form.label :price %>
+    <%= form.label :price, '価格' %>
     <%= form.number_field :price, id: :item_price %>
   </div>
 
   <div class="field">
-    <%= form.label :description %>
+    <%= form.label :description, '商品の説明' %>
     <%= form.text_area :description, id: :item_description %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit '登録' %>
   </div>
 <% end %>
