--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,26 +1,20 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Items</h1>
+<h1>商品一覧</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Price</th>
-      <th>Description</th>
-      <th colspan="3"></th>
+      <th>商品</th>
+      <th>価格</th>
     </tr>
   </thead>
 
   <tbody>
     <% @items.each do |item| %>
       <tr>
-        <td><%= item.name %></td>
-        <td><%= item.price %></td>
-        <td><%= item.description %></td>
-        <td><%= link_to 'Show', item %></td>
-        <td><%= link_to 'Edit', edit_item_path(item) %></td>
-        <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to item.name, item %></td>
+        <td><%= item.price.to_s(:delimited) %>円</td>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +22,4 @@
 
 <br>
 
-<%= link_to 'New Item', new_item_path %>
+<%= link_to '商品を出品する', new_item_path %>
