--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Item</h1>
+<h1>商品を出品する</h1>
 
 <%= render 'form', item: @item %>
 
-<%= link_to 'Back', items_path %>
+<%= link_to 'キャンセル', items_path %>
