--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,26 +1,20 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Users</h1>
+<h1>会員一覧</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th>Password digest</th>
-      <th colspan="3"></th>
+      <th>名前</th>
+      <th>メールアドレス</th>
     </tr>
   </thead>
 
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.name %></td>
+        <td><%= link_to user.name, user %></td>
         <td><%= user.email %></td>
-        <td><%= user.password_digest %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +22,4 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to '新規登録', new_user_path %>
