--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -1,5 +1,5 @@
 <h2>ログイン</h2>
-<%= form_tag "login" do %>
+<%= form_tag "/login" do %>
   <p>メールアドレス</p>
   <input name="email" value="<%= @email_previous_input %>">
   <p>パスワード</p>
