--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,20 @@
  *= require_tree .
  *= require_self
  */
+
+.alert {
+  margin: 20px 0;
+}
+
+.alert-notice, .alert-info {
+  color: royalblue;
+}
+.alert-success {
+  color: mediumseagreen;
+}
+.alert-caution {
+  color: sandybrown;
+}
+.alert-danger {
+  color: tomato;
+}
