--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <strong>名前:</strong>
   <%= @user.name %>
@@ -23,6 +21,9 @@
       <%= link_to "詳細", "/order/#{order.id}" %>
     </li>
     <% end %>
+    <% if @user.orders.blank? %>
+      <li>まだ注文がありません</li>
+    <% end %>
   </ul>
 
 <% end %>
@@ -38,6 +39,9 @@
     <%= link_to "詳細・編集", review %>
   </li>
   <% end %>
+  <% if @user.orders.blank? %>
+    <li>まだレビューを投稿していません</li>
+  <% end %>
 </ul>
 
 <h2>出品一覧</h2>
@@ -48,5 +52,8 @@
     <%= item.price.to_s(:delimited) %>円
     <%= item.created_at.strftime("%Y-%m-%d") %>
   </li>
+  <% end %>
+  <% if @user.orders.blank? %>
+    <li>まだ出品がありません</li>
   <% end %>
 </ul>
