--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,7 +39,7 @@
     <%= link_to "詳細・編集", review %>
   </li>
   <% end %>
-  <% if @user.orders.blank? %>
+  <% if @user.reviews.blank? %>
     <li>まだレビューを投稿していません</li>
   <% end %>
 </ul>
@@ -53,7 +53,7 @@
     <%= item.created_at.strftime("%Y-%m-%d") %>
   </li>
   <% end %>
-  <% if @user.orders.blank? %>
+  <% if @user.items.blank? %>
     <li>まだ出品がありません</li>
   <% end %>
 </ul>
