--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: item, local: true) do |form| %>
+<%= form_with(model: item, local: true, multipart: true) do |form| %>
   <% if item.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(item.errors.count, "error") %> prohibited this item from being saved:</h2>
@@ -24,6 +24,11 @@
   <div class="field">
     <%= form.label :description, '商品の説明' %>
     <%= form.text_area :description, id: :item_description %>
+  </div>
+
+  <div class="field">
+    <%= form.label :image, '画像' %>
+    <%= form.file_field :image, id: :item_image %>
   </div>
 
   <div class="actions">
