--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -4,6 +4,11 @@
 </p>
 
 <p>
+  <strong>画像:</strong><br>
+  <img src="/item_images/<%= @item.image_name %>" width="300px">
+</p>
+
+<p>
   <strong>価格:</strong>
   <%= @item.price.to_s(:delimited) %>円
 </p>
