--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,7 +1,8 @@
-$theme_color: darkturquoise;
+$theme_color: mediumseagreen;
 
 * {
   box-sizing: border-box;
+  font-family: verdana, arial, helvetica, sans-serif;
 }
 
 html, body {
@@ -11,7 +12,7 @@ html, body {
 }
 
 a {
-  color: $theme_color;
+  color: gray;
 }
 
 header {
@@ -30,6 +31,7 @@ header {
     float: right;
     height: 100%;
   }
+
   a {
     box-sizing: border-box;
     padding: 0 20px;
