--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -1,8 +1,8 @@
 <h1>ログイン</h1>
 <%= form_tag "/login" do %>
-  <p>メールアドレス</p>
+  <%= label_tag :name, "メールアドレス" %>
   <input name="email" value="<%= @email_previous_input %>">
-  <p>パスワード</p>
+  <%= label_tag :name, "パスワード" %>
   <input name="password" type="password">
   <input type="submit" value="ログイン">
 <% end %>
