--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= form.label :password, "パスワード" %>
-    <%= form.text_field :password, id: :user_password %>
+    <%= form.password_field :password, id: :user_password %>
   </div>
 
   <div class="actions">
