--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -11,6 +11,8 @@ html, body {
   margin: 0;
   padding: 0;
   background: whitesmoke;
+  width: 100%;
+  height: 100%;
 }
 
 a {
@@ -22,7 +24,7 @@ input {
   font-size: 18px;
   margin: 10px 0;
   height: 40px;
-  border: 1px solid rgba(0, 0, 0, .1);
+  border: 1px solid rgba(0, 0, 0, .2);
   border-radius: 2px;
   display: block;
 }
@@ -36,7 +38,7 @@ textarea {
   font-size: 18px;
   padding: 0 10px;
   height: 80px;
-  border: 1px solid rgba(0, 0, 0, .1);
+  border: 1px solid rgba(0, 0, 0, .2);
   display: block;
 }
 
@@ -46,7 +48,7 @@ select {
   height: 40px;
   min-width: 60px;
   background: white;
-  border: 1px solid rgba(0, 0, 0, .1);
+  border: 1px solid rgba(0, 0, 0, .2);
   text-align: center;
 }
 
@@ -70,7 +72,7 @@ header {
   color: $theme_color_font_color;
   background: $theme_color;
   line-height: 70px;
-  // box-shadow: 0 3px 3px rgba(0, 0, 0, .3);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, .2);
   #logo {
     font-size: 20px;
     font-weight: bold;
@@ -100,6 +102,58 @@ header {
   }
 }
 
+
+main {
+  padding: 10px;
+}
+h1 {
+  color: $theme_color;
+  font-size: 24px;
+  margin-left: 10px;
+}
+h2 {
+  color: $theme_color;
+  font-size: 18px;
+  margin-left: 10px;
+  margin-top: 32px;
+}
+
+.login-signup-card {
+  background: white;
+  margin: 50px auto;
+  padding: 50px;
+  max-width: 400px;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, .3);
+  h1 {
+    margin-left: 0;
+    text-align: center;
+  }
+  input {
+    width: 100%;
+  }
+  input[type="submit"] {
+    margin-top: 40px;
+  }
+}
+
+.alert {
+  background: white;
+  padding: 20px 10px;
+}
+
+.alert-notice, .alert-info {
+  color: royalblue;
+}
+.alert-success {
+  color: mediumseagreen;
+}
+.alert-caution {
+  color: sandybrown;
+}
+.alert-danger {
+  color: tomato;
+}
+
 @media (max-width: 670px) {
   header {
     overflow: auto;
@@ -124,39 +178,10 @@ header {
   input, textarea {
     width: 100%;
   }
+  .login-signup-card {
+    margin: 0;
+    padding: 40px 20px 80px;
+    height: 100%;
+  }
 
-}
-
-
-main {
-  padding: 10px;
-}
-h1 {
-  color: $theme_color;
-  font-size: 24px;
-  margin-left: 10px;
-}
-h2 {
-  color: $theme_color;
-  font-size: 18px;
-  margin-left: 10px;
-  margin-top: 32px;
-}
-
-.alert {
-  background: white;
-  padding: 20px 10px;
-}
-
-.alert-notice, .alert-info {
-  color: royalblue;
-}
-.alert-success {
-  color: mediumseagreen;
-}
-.alert-caution {
-  color: sandybrown;
-}
-.alert-danger {
-  color: tomato;
 }
