--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,17 +13,17 @@
 
   <div class="field">
     <%= form.label :name, "名前" %>
-    <%= form.text_field :name, id: :user_name %>
+    <%= form.text_field :name, id: :user_name, required: true %>
   </div>
 
   <div class="field">
     <%= form.label :email, "メールアドレス" %>
-    <%= form.text_field :email, id: :user_email %>
+    <%= form.email_field :email, id: :user_email, required: true %>
   </div>
 
   <div class="field">
     <%= form.label :password, "パスワード" %>
-    <%= form.password_field :password, id: :user_password %>
+    <%= form.password_field :password, id: :user_password, required: true %>
   </div>
 
   <div class="actions">
