--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>会員情報の編集</h1>
-
-<%= render 'form', user: @user %>
-
-<%= link_to 'キャンセル', @user %>
+<div class="login-signup-card">
+  <h1>会員情報の編集</h1>
+  <%= render 'form', user: @user %>
+  <%= link_to 'キャンセル', @user %>
+</div>
