--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,4 @@
-<h1>新規会員登録</h1>
-
-<%= render 'form', user: @user %>
-
-<%= link_to 'キャンセル', root_path %>
+<div class="login-signup-card">
+  <h1>新規会員登録</h1>
+  <%= render 'form', user: @user %>
+</div>
