--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -148,7 +148,7 @@ h2 {
   color: seagreen;
   background: lightgreen;
 }
-.alert-caution {
+.alert-warning {
   color: sandybrown;
   background: navajowhite;
 }
