message font-color readablility

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -149,11 +149,11 @@ h2 {
   background: lightgreen;
 }
 .alert-warning {
-  color: sandybrown;
+  color: orangered;
   background: navajowhite;
 }
 .alert-danger {
-  color: tomato;
+  color: crimson;
   background: lightpink;
 }
 
