--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="login-signup-card">
+<div class="form-card">
   <h1>会員情報の編集</h1>
   <%= render 'form', user: @user %>
   <%= link_to 'キャンセル', @user %>
