--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -1,4 +1,4 @@
-<div class="login-signup-card">
+<div class="form-card">
   <h1>ログイン</h1>
   <%= form_tag "/login" do %>
     <%= label_tag :name, "メールアドレス" %>
