--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,5 +1,7 @@
+<div class="form-card">
 <h1>商品を出品する</h1>
 
 <%= render 'form', item: @item %>
 
-<%= link_to 'キャンセル', items_path %>
+<%= button_to 'キャンセル', items_path, method: :get, class: "negative-button" %>
+</div>
