--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,31 +1,26 @@
-<p>
-  <strong>商品名:</strong>
-  <%= @item.name %>
-</p>
+<div class="container">
+  <div class="item-card item-card-big">
 
-<p>
-  <strong>画像:</strong><br>
   <img src="/item_images/<%= @item.image_name %>" width="300px">
-</p>
+  <div class="item-card-right">
+    <div class="item-card-title">
+    <%= @item.name %>
+  </div>
 
-<p>
-  <strong>価格:</strong>
+<div class="item-card-price">
   <%= @item.price.to_s(:delimited) %>円
-</p>
+</div>
 
 <p>
-  <strong>商品の説明:</strong>
   <%= @item.description %>
 </p>
-
-<% if @user_logged_in && @user_logged_in.id == @item.user.id %>
-  <%= link_to '商品情報の編集', edit_item_path(@item) %> |
-  <%= link_to '商品を削除', @item, method: :delete, data: { confirm: '本当に商品を削除しますか?' } %> |
-<% end %>
-<%= link_to '商品一覧', items_path %>
+<p>
+  <strong>出品者:</strong>
+  <%= link_to @item.user.name, @item.user %> さん
+</p>
+<hr>
 
 <%= form_tag '/cart/add_item/' do %>
-  <p>
     数量: <select name="quantity">
     <% for n in 1..10 do %>
       <option value="<%= n %>"><%= n %></option>
@@ -33,22 +28,37 @@
     </select>
     <input type="hidden" name="item_id" value="<%= @item.id %>">
     <input type="submit" value="カートに追加">
-  </p>
+<% end %>
+</div>
+</div>
+
+<% if @user_logged_in && @user_logged_in.id == @item.user.id %>
+<div class="card">
+  <h2>商品の管理</h2>
+  <%= button_to '商品情報の編集', edit_item_path(@item), method: :get %>
+  <%= button_to '商品を削除', @item, method: :delete, data: { confirm: '本当に商品を削除しますか?' } %>
+</div>
 <% end %>
 
-<h2>カスタマーレビュー(<%= @reviews.size %>件)</h2>
+<div class="card">
+<h2>カスタマーレビュー (<%= @reviews.size %>件)</h2>
 <% @reviews.each do |review| %>
   ★<%= review.score %>
   <b><%= review.title %></b>
   <%= review.content %>
   <% if review.user%>
-    <%= review.user.name %>
+    <%= link_to review.user.name, review.user %>
   <% else %>
     匿名ユーザ
   <% end %>
   <br>
 <% end %>
+<% if @reviews.blank? %>
+  レビューはまだありません
+<% end %>
+</div>
 
+<div class="card">
 <h2>レビュー投稿</h2>
 <%= form_tag("/reviews") do %>
   <% if @review.errors.any? %>
@@ -58,17 +68,11 @@
     <% end %>
     </ul>
   <% end %>
-  <div class="field">
-    <%= select :review, :score, [["5", "5"], ["4", "4"], ["3", "3"], ["2", "2"], ["1", "1"]], :selected => @review.score %>
-  </div>
-    <div class="field">
-    <input name="review[title]" value="<%= @review.title %>">
-  </div>
-  <div class="field">
-    <textarea name="review[content]" value="<%= @review.content %>"></textarea>
-  </div>
-  <input name="review[item_id]" type="hidden" value="<%= @item.id %>">
-  <div class="actions">
+    <%= select :review, :score, [["5", "5"], ["4", "4"], ["3", "3"], ["2", "2"], ["1", "1"]], :selected => @review.score %> ★
+    <input name="review[title]" value="<%= @review.title %>" placeholder="見出し">
+    <textarea name="review[content]" value="<%= @review.content %>" placeholder="本文"></textarea>
+    <input name="review[item_id]" type="hidden" value="<%= @item.id %>">
     <input type="submit" value="投稿">
-  </div>
 <% end %>
+</div>
+</div>
