--- a/app/assets/stylesheets/cart.scss
+++ b/app/assets/stylesheets/cart.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the cart controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.cart-item {
+  background: white;
+  box-shadow: 0 3px 3px rgba(0, 0, 0, .3);
+  margin: 1px 0;
+  img {
+    width: 18%;
+    vertical-align: top;
+  }
+  .cart-item-content {
+    display: inline-block;
+    padding: 2%;
+    vertical-align: top;
+    width: 80%;
+  }
+  .cart-item-quantity-form {
+    display: none;
+  }
+}
